# zero2prod

./: .gitignore  Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
